[Bug Hunting] The chart widget shows total white empty content when no data 1.Show spinning icon while loading in insight 2.Display label <no data> if empty content of graph 3.Align height of empty graph with others of same line 4.Release lock when access insight with an id value in url address

--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -95,13 +95,18 @@ table {
   }
 
   & div[role=tabpanel] {
-    display: flex;
     overflow-y: auto;
     flex: 1;
 
     & li {
       flex-shrink: 0;
     }
+  }
+}
+
+.grommetux-layer {
+  & div[role=tabpanel] {
+    display: flex;
   }
 }
 
